[CI] Deploy to local repo.
Signed-off-by: Juri Berlanda <juri.berlanda@tuwien.ac.at>

--- a/pom.xml
+++ b/pom.xml
@@ -38,4 +38,12 @@
 	</plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/j-be/ewp-iias-conditions-hash-calculator</url>
+        </repository>
+    </distributionManagement>
+
 </project>
