[CI] Deploy SNAPSHOTS, too.
Signed-off-by: Juri Berlanda <juri.berlanda@tuwien.ac.at>

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <name>GitHub Packages</name>
             <url>https://maven.pkg.github.com/j-be/ewp-iias-conditions-hash-calculator</url>
         </repository>
+        <snapshotRepository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/j-be/ewp-iias-conditions-hash-calculator</url>
+        </snapshotRepository>
     </distributionManagement>
 
 </project>
