[CI] Try to make distributionManagement less hardcoded.
Signed-off-by: Juri Berlanda <juri.berlanda@tuwien.ac.at>

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
       - name: Deploy to GitHub repo
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode deploy -Dgithub.repo=$GITHUB_REPOSITORY
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
